Some fixes in backend services (#29)
* some fixes in services

* update weather stats handlers and model